fixed overflow problems

--- a/propeltheme/htdocs/propel.css
+++ b/propeltheme/htdocs/propel.css
@@ -28,7 +28,6 @@ body {
 }
 
 #header {
-	overflow: auto;
 	border-bottom: 1px dashed #D0D0D0;
 }
 
@@ -103,7 +102,6 @@ body {
 	margin: 0;
 	padding: 0 1px 0 0; 
 	list-style : none;
-	overflow: auto;
 	list-style: none;
 }
 
@@ -174,7 +172,6 @@ body {
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	overflow: auto;
 	text-align: right;
 }
 
